@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11211] "Når datadock bliver startet af app_starter.py med option start, lukker den ikke pænt ned hvis den har flere jobs"
    - bug [11197] "AdministrationStreamElement skal laves om til privat klasse i AdministrationStream"
    - bug [11170] "Kan vi slette replaceObject metoden fra IObjectRepository"
    - bug [11181] "IObjectRepository.getIdentifiers metoderne"
